2006-08-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp: Fixed bug [1542064]. The problem was that
	the index in the tap_doppler_spectrum array in the
	TDL_Channel::init() function could go out of bounds, if the
	TDL_Channel class was used with two different channel profile
	lengths. Thanks to Jordy Potman for reporting this bug and
	providing a patch with a solution (merged rev. 645:646 from
	itpp-3-10 branch).

	* itpp/comm/modulator.cpp, itpp/comm/modulator.h,
	tests/modulator_test.cpp: Further redesign of 1D and 2D modulator
	classes. From now, there is only one templated base class
	Modulator, which can handle 1D (real) and 2D (complex)
	constellations. BPSK and PAM modulators are split into:
	BPSK_c/PAM_c classes which use complex valued interface but only
	real part of the signal is used, and BPSK/PAM classes that have
	real valued interface. Besides, demodulate_soft_bits() functions
	use additional parameter "method" to switch between Log-MAP or
	approximate demodulation algorithm.

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h: Reverted the
	previous interface of binomial functions. "double binom()" defined
	for higher range of calculated results. 

2006-08-19  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/egolay.cpp: Included "converters.h".

2006-08-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/egolay.cpp: Minor fix - "(int)floor()" replaced with
	"floor_i()".

2006-08-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h,
	itpp/base/itmisc.cpp, itpp/base/itmisc.h: Fixed bug [1542482]. Now
	binom(n, k) works properly. "double binom(int, int)" was
	redundant, because the result of this function was always
	integral. Therefore it was replaced with "int binom(int, int)".
	BTW, moved fact(), binom(), log_binom() and gcd() functions from
	itmisc.{cpp,h} to elmatfunc.{cpp,h}.
	
2006-08-16  Adam Piatyszek  <ediap@users.sourceforge.net>
